[tool.poetry]
name = "analyzer"
version = "0.1.0"
description = ""
authors = ["John Shanahan <shanahan.jrs@gmail.com>"]

[tool.poetry.dependencies]
analysis_utils = { path = "../../modules/analysis_utils/" }
python = "^3.6"
nltk = "^3.5"
flask = "^1.1.2"
textblob = "^0.15.3"
redis = "^3.5.3"
influxdb = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
